--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 
 # dependencies
 /node_modules
-/projects/node_modules
+/projects/ngx-dicom/node_modules
 
 # profiling files
 chrome-profiler-events*.json
